--- a/src/i18n/locales/eu.json
+++ b/src/i18n/locales/eu.json
@@ -53,5 +53,11 @@
     },
     "overlay": {
         "welcome": "Ongi Etorri"
+    },
+    "categories": {
+        "earring": "Belarritakoa",
+        "ring": "Eraztuna",
+        "bracelet": "Pultsera",
+        "necklace": "Lepokoa"
     }
 }
